<resources>
    <string name="app_name">App Marketing Tips</string>
    <string name="welcome_string1">That is great that you dicided to take an Android Basics Nanodegree by Google course! </string>
    <string name="welcome_string2">All this technical work is really great and astonishing!
        But do you know, what to do next when the app is almost finished? What nessesary steps to take and how to make people know about your app? This app gives you
        some basic steps to take after your work is finished.</string>
    <string name="welcome_string3">Are you ready?</string>
    <string name="essential_why">Why should the App exist? Clearly understand the need for the App - Does it stand on its own or is it a companion to an existing product?</string>
    <string name="essential_value">Provide Value. An average smartphone user spends 80% of the time he spends with smartphone on the Top 3 Apps of his choice.
        If you need the user to come back to your App, you need to give him a reason to do so. Showcase the value the user gets by using your App.</string>
    <string name="essential_marketing">Don’t release an app if you don’t plan to market it effectively. Merely publishing in app store would not garner your apps huge downloads.
        Get familiar with the app discovery paths. Do not neglect the app’s titles and descriptions. They greatly help in App Store Optimization (ASO).
        Although app stores are the primary source of discovery.</string>
    <string name="essential_create_great">Create a great app. The most important thing is creating an app that is useful to your target audience.
        It should have minimal bugs and glitches at launch. It should improve as time passes based on reviews and other factors.</string>
    <string name="stage_develop_tailoring">Users interact with their devices in different ways and contexts. A great app designed for smartphones,
        for example, won’t provide a great experience on Android Wear. Tailoring your app for each form factor will provide a better user experience.</string>
    <string name="stage_develop_undeveloped_markets">A majority of users in these markets face constraints not commonly seen in developed markets, such as:
        limited access to data connections and high costs when they are available, devices with reduced memory and smaller screen sizes, and prepaid accounts
        topped up as means permit. To address the needs of these users, apps need to be aligned closely with local commerce, culture, and language —
        more so than might be necessary when targeting developed markets.</string>
    <string name="stage_develop_play_policy">Make sure you’re familiar with Google Play policies and guidelines, and apply them to your apps.
        Google Play guidelines include basic test procedures, so you can focus on devising and running tests for your app’s unique features.</string>
    <string name="stage_develop_permissions">Request permissions at runtime appropriately. Make sure you request permissions at the right time and appropriately educate and inform your users about the need for permission requests.</string>
    <string name="stage_launch_checklist">Check out a Google Developer’s checklist. It brings together the processes you should follow to ensure your app is launched successfully. The tasks are numbered to give you an idea of the normal sequence in which they would be actioned.
        The list can be found on https://developer.android.com/distribute/best-practices/launch/launch-checklist.html</string>
    <string name="stage_launch_prelaunch">Remember to use pre-launch and crash reports to improve your app. Pre-launch reports use automated tests on real devices to identify layout issues, provide crash diagnostics, locate security vulnerabilities, identify performance issues, and more.
        You can then run custom tests on Firebase Test Lab and use the crash and ANR reports to search more deeply for quality issues.</string>
    <string name="stage_launch_beta_tests">Run Beta Tests. Use the Google Play Console to release early versions of your app to trusted users for alpha and beta testing.
        This gives you the opportunity to fix any technical or user experience issues before you release it widely.</string>
    <string name="stage_launch_localized_tests">Remember to test localized app in each language.Even the best translator can miss language nuances that users will identify quickly once your app has been released.
        By testing your localizations, you’ll avoid language or content slip-ups that could be detrimental to your app’s reception.</string>
    <string name="stage_engage_google_search">Drive engagement through links and Google search results. Enable Google to crawl your Android app content and present your app through Google Search results,
        when your app content corresponds to a web page that you own. Use app links to open your app automatically, eliminating the need for users to choose how they want Android to handle your links.</string>
    <string name="stage_engage_adwords">Engage new users and Re-engage users who have your app installed with targeted AdWords campaigns. Users do not always remember to open the apps they have installed, especially if they have installed a lot of apps.
        With mobile app engagement campaigns you can re-engage with users from Search or target specific audiences with Display Networks ads.</string>
    <string name="stage_engage_play_optimization">Android Play Optimization. It is something you must do in order to succeed. It’s about improving your visibility in app store and improving conversion from your app page.</string>
    <string name="stage_engage_review">Get yourself reviewed. Try to get positive app reviews from websites. If you have good app many websites will do it for free. If it’s not an app that requires a review, try to get into top 10 new apps, apps of week etc published by these sites.</string>
    <string name="stage_engage_retention">Focus on retention. You can get millions of downloads but may not have many active users.
        Make sure once you have a decent amount of downloads, you must focus on retention more than downloads. Retention should be a part of your process from the beginning.</string>
    <string name="stage_grow_adwords">Increase downloads with universal app campaigns.
        AdWords promotes your app to interested users where they spend time on phones and tablets—with app install ads on Google Play, Google Search, YouTube, and within apps and across the web.</string>
    <string name="stage_grow_goglobal">Go global and successfully grow valuable audiences in new countries. But not all apps and games have the same appeal globally.
        When launching outside your home market, conduct thorough research to understand the local audience and take their preferences and expectations into account.</string>
    <string name="stage_grow_aquisition">Understand where your valuable users come from so you can optimize your marketing. The User Acquisition tab in the Play Console provides detailed information on how users are finding and acquiring your app. It also reports on how users go on to buy your in-app products — all without you having to set up and create complex reporting.</string>
    <string name="stage_grow_score_listing">Convert more visits to installs with store listing experiments. Get more installs by using store listing experiments to find the best app icon, images, video, and descriptions for your app on Google Play.</string>
    <string name="stage_earn_model">Choose the right monetization model. To maximize your revenue, consider multiple monetization models for your app.
        Different audiences have different preferences for paid apps, in-app purchases, subscriptions, ads, and e-commerce.</string>
    <string name="stage_earn_inappbilling">Sell digital purchases with Play In-app Billing. When you use Google Play In-app Billing to sell items, Google Play handles the checkout details so your app never has to process financial transactions.
        Your app will use the same checkout flow which is used for content purchases on Google Play, so users will get a familiar, reliable, and secure experience.</string>
    <string name="stage_earn_conversions">Improve Conversions using Google Analytics for Firebase. Use unlimited reporting for up to 500 distinct events and create custom audiences with Google Analytics for Firebase to understand how your users behave. From the data, you can get detailed insights into app use and user engagement.
        These insights can help you improve conversions by making informed decisions regarding app marketing and performance optimizations.</string>
    <string name="stage_earn_androidpay">Enable simple, secure checkout with Android Pay. Eliminate credit card and shipping forms from your app with Android Pay and drive higher conversions on purchases of physical goods and services.</string>
    <string name="category_essential">Essential questions</string>
    <string name="category_lifecycle">Common App’s lifecycle</string>
    <string name="category_develop">Develop stage</string>
    <string name="category_launch">Launch stage</string>
    <string name="category_engage">Engage stage</string>
    <string name="category_grow">Grow stage</string>
    <string name="category_earn">Earn stage</string>
    <string name="category_quiz">Quiz</string>
    <string name="quizQuestion1">What is #1 thing to do, when you developed an app and plan to publish it in Google Play?</string>
    <string name="q1a1">Use the right monetization model.</string>
    <string name="q1a2">Get positive reviews from sites and blogs.</string>
    <string name="q1a3">Check the app via Google Developer’s checklist.</string>
    <string name="quizQuestion2">You’ve coded a super-cool-featured app for phones. You think you should target global markets. Which versions of Android platform should target your app?</string>
    <string name="q2a1">Add extra permissions to the current version. Anyway you’ll need them.</string>
    <string name="q2a2">You’ll ask the user to accept all permissions, closing unrequired with each version.</string>
    <string name="q2a3">You’ll leave just a few required for the current release permissions.</string>
    <string name="quizQuestion3">What is #1 thing to do, when you developed an app and plan to publish it in Google Play?</string>
    <string name="q3a1">Only best phones OS from v.7.1 to v.8.1. Their owners are most progressive.</string>
    <string name="q3a2">OS from v.5.0 to v.8.1</string>
    <string name="q3a3">Older models with OS v. 4.x. They are old and cheap to buy, it is a major part of running devices.</string>
    <string name="quizQuestion4">Your app is ready. You ran all the tests on your smartphone and the app is runs perfect. Which devices can target while launching the app in this case?</string>
    <string name="q4a1">Android Phones</string>
    <string name="q4a2">Android Wear</string>
    <string name="q4a3">Android Auto</string>
    <string name="q5a1">Android Studio</string>
    <string name="q5a2">AdWords</string>
    <string name="q5a3">Android Pay</string>
    <string name="q5a4">Google Play Console</string>
    <string name="quizQuestion6">What is the name of Google service that could be used for higher conversions on purchases of physical goods and services from your app?</string>
    <string name="quizQuestion7">You’ve launched your app. Congratulations! What are two most important way of engaging new users of listed?</string>
    <string name="q7a1">High-quality localizations</string>
    <string name="q7a2">Google Search optimization</string>
    <string name="q7a3">Google Play optimization</string>
    <string name="q7a4">A right-chosen monetization model</string>
</resources>