<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:textSize="24sp"
    tools:context="com.egrishin.appmarketingtips.EssentialQuestions">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Launch stage"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="14dp"
        android:textSize="16sp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/stage_launch_checklist"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/stage_launch_beta_tests"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/stage_launch_prelaunch"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/stage_launch_localized_tests"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/to_contents"
            android:layout_width="256dp"
            android:layout_height="58dp"
            android:text="I passed the checklist! Launch!"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:onClick="stageLifecycle"
            />

    </RelativeLayout>

</LinearLayout>
